--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ body {
 /* Hero */
 
 .home-inner {
-  background-image: url("/img/computers.png");
+  background-image: url("https://raw.githubusercontent.com/EvonuX/Agency/master/img/computers.png");
 }
 
 .caption {
@@ -153,7 +153,7 @@ h3.heading {
 /* Resources */
 
 .fixed {
-  background-image: url("/img/business.jpeg");
+  background-image: url("https://raw.githubusercontent.com/EvonuX/Agency/master/img/business.jpeg");
   z-index: -1;
 }
 
